add subheading and paragraph

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <body>
 
 <h1>Hello World</h1>
+<h2>it's good to be here</h2>
+
+<p>Bello Dorld. Skello Norld. Wello Churld. Vello Yurld. Mello Borld. Pello Spurld.</p>
 
 </body>
 </html>
