add navigation links to website

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
 <p>Bello Dorld. Skello Norld. Wello Churld. Vello Yurld. Mello Borld. Pello Spurld.</p>
 
+<a href="goodbye.html"> Goodbye Page </a>
+
 </body>
 </html>
