--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
 <p>Bello Dorld. Skello Norld. Wello Churld. Vello Yurld. Mello Borld. Pello Spurld.</p>
 
+<ul>
+	<li> What's up dude </li>
+	<li> What are you looking at? </li>
+	<li> Time for you to say goodbye. </li>
+	<li> click below to say goodbye. </li>
+</ul>
+
 <a href="goodbye.html"> Goodbye Page </a>
 
 </body>
