new changes to linkedin link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <a href="goodbye.html"> Goodbye Page </a>
 
-<a href src="https://www.linkedin.com/in/dhrumilmehta">  Find me on LinkedIn!</a>
+<br></br>
+
+<a href src="https://www.linkedin.com/in/henry-peyronnin-76a3a17a/">  Find me on LinkedIn!</a>
 
 </body>
 </html>
