--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <a href="goodbye.html"> Goodbye Page </a>
 
-<br></br>
-
-<a href src="https://www.linkedin.com/in/henry-peyronnin-76a3a17a/">  Find me on LinkedIn!</a>
+<br>
+<a href src="https://www.linkedin.com/in/henry-peyronnin">  Find me on LinkedIn!</a>
+</br>
 
 </body>
 </html>
