--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Hello World</h1>
 <h2>it's good to be here</h2>
 
-<a href src="https://www.linkedin.com/in/henry-peyronnin-76a3a17a/">  Find me on LinkedIn!</a>
+<a href ="https://www.linkedin.com/in/henry-peyronnin-76a3a17a/">  Find me on LinkedIn!</a>
 
 <p>Bello Dorld. Skello Norld. Wello Churld. Vello Yurld. Mello Borld. Pello Spurld.</p>
 
